@@ -1,4 +1,5 @@
 Current
+Fixed: GITHUB-2613: Ignored Tests are not retrieved for a mixed test class (test with enabled, disabled and ignored test method) (Krishnan Mahadevan)
 Fixed: GITHUB-849: Performance improvement by fixing hashCode (testn & Vladimir Sitnikov)
 Fixed: GITHUB-2570: Use Guice injector for instantiate IRetryAnalyzer (Krishnan Mahadevan)
 Fix: use proper instances for beforeClass callback when different instances collide on hash codes
